# FairplayKSM

./: .gitignore  CMakeLists.txt  CONTRIBUTORS.txt  FairplayKSM.c  FairplayKSM.pyi  LICENSE  README.md  test.py
.devcontainer/: Dockerfile  devcontainer.json
include/: SKDCredentials.h
